src/main/java/org/springframework/samples/petclinic/common/error/ErrorCodeInterface.java
package org.springframework.samples.petclinic.common.error;

public interface ErrorCodeInterface {
	Integer getHttpStatusCode();
	Integer getErrorCode();
	String getDescription();
}
